# MLHTechnicia

./: .env.example  .gitignore  ARCHITECTURE.md  PROJECT_MAP.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  START_HERE.md  TESTING_GUIDE.md  WHERE_ARE_MY_FILES.md  api_server.py  demo_prompts.md  package-lock.json  pyproject.toml  requirements.txt  runner.py  setup.bat  setup.sh
agents/: c1_agent.py  custom_pipeline.py  medical_agent.py  medical_vision.yaml  readme.md  simple_image_analysis.py  travel_agent.py  video_agent.py  vision_agent.yaml
benchmarks/: readme.md
configs/: __init__.py  c1_agent_config.py  crypto_agent_config.py  general_config.py  self_care_agent_config.py  travel_agent_config.py
examples/: complete_workflow.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
memory/: basic_mem0_chatbot.py  generate_embeddings.py  main.py  readme.md  update_memory.py  vectordb.py
memory/mem/: generate_embeddings.py  response_generator.py  update_memory.py  vectordb.py
rest_apis/: readme.md
roma_vlm/: __init__.py
roma_vlm/engine/: __init__.py  solve.py
roma_vlm/modules/: __init__.py  aggregator.py  atomizer.py  executor.py  planner.py  verifier.py
roma_vlm/signatures/: __init__.py  multimodal_signatures.py
roma_vlm/utils/: __init__.py  image_utils.py
ui/: __init__.py  app.py  readme.md
voice/: readme.md
